--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.399.0",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
+    "mysql": "^2.16.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
