--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.399.0",
     "axios": "^0.18.0",
+    "bookshelf-schema": "^0.3.6",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "mysql": "^2.16.0",
