--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha **/*.test.js",
+    "test": "mocha **/*.test.js --watch",
     "start": "node server.js"
   },
   "author": "",
@@ -19,6 +19,7 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "mocha": "^5.2.0"
   }
 }
